<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/atletaOutroLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaOutroFragment">

    <EditText
        android:id="@+id/etNomeOutro"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataOutro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etRecordeOutro"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/recorde"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAcademiaOutro" />

    <Button
        android:id="@+id/btnCadastrarOutro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="56dp"
        android:hint="@string/cadastrar"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/etRecordeOutro"
        app:layout_constraintTop_toBottomOf="@+id/etRecordeOutro" />

    <EditText
        android:id="@+id/etAcademiaOutro"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/academia"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBairroOutro" />

    <EditText
        android:id="@+id/etBairroOutro"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="374dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataOutro" />

    <EditText
        android:id="@+id/etDataOutro"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:hint="@string/nascimento"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etBairroOutro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeOutro" />

</androidx.constraintlayout.widget.ConstraintLayout>